--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -26,3 +26,43 @@
 .error .form-collapse {
   margin-bottom: $margin-xs;
 }
+
+input[type=text]::-ms-clear {
+  width : 0;
+  height: 0;
+}
+
+input::placeholder {
+  color: $placeholder-color;
+  opacity: 1;
+}
+
+input::-webkit-input-placeholder {
+  color: $placeholder-color;
+  opacity: 1;
+}
+
+input::-moz-placeholder {
+  color: $placeholder-color;
+  opacity: 1;
+}
+
+input::-ms-input-placeholder {
+  color: $placeholder-color;
+  opacity: 1;
+}
+
+input:-webkit-input-placeholder {
+  color: $placeholder-color;
+  opacity: 1;
+}
+
+input:-moz-placeholder {
+  color: $placeholder-color;
+  opacity: 1;
+}
+
+input:-ms-input-placeholder {
+  color: $placeholder-color;
+  opacity: 1;
+}
